# titansGameServer

./: .env  Cargo.toml  README.md
db_setup/: create_tables.sql
src/: lib.rs  main.rs
src/models/: auth.rs  characters.rs  friends.rs  lobbies.rs  mod.rs
src/routes/: auth.rs  characters.rs  friends.rs  game_ws.rs  lobbies.rs  mod.rs
src/services/: auth.rs  characters.rs  friends.rs  lobbies.rs  mod.rs
src/utils/: db_utils.rs  jwt.rs  mod.rs
