[package]
name = "titansGameServer"
version = "0.1.0"
edition = "2021"

[lib]
name = "titans_game_server"
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
jsonwebtoken = { version = "9.3.0"}
bcrypt = "0.15.1"
env_logger = "0.11.5"
log = "0.4.22"
