[package]
name = "titansGameServer"
version = "0.1.0"
edition = "2021"

[lib]
name = "titans_game_server"
path = "src/lib.rs"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
jsonwebtoken = { version = "9.3.0"}
bcrypt = "0.15.1"
sqlx = {version = "0.8.2", features = ["macros", "mysql", "runtime-tokio-native-tls"]}
dotenvy = "0.15.7"
